2009-07-18  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.14

	* Fixed buffer underrun problem in the kernel, which would cut
	input and insert bogus newline characters.

2009-07-17  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.13

	* Disabled word-wrapping in input cells to prevent gtk from
	messing up input at non-symbol boundaries. Added horizontal scroll
	bar. 

2009-06-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Added safeguard against overwriting existing notebook files.

2009-06-19  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed single-factor object pattern replacement bug.

2009-06-15  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Faster TeX engine and window reflow on resize added.

2009-06-05  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Made @rename_dummies act on single factor terms (traces).

2009-05-31  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.11

2009-05-30  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Added experimental drawing of cell boundaries in the GUI.

2009-05-29  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed lookup of list properties so that multiple list properties
	involving the same symbol all get scanned (in progress).

	* Centralised handling of commutativity properties to make them
	more robust and uniform. 

2009-05-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Removed auto-deletion of list properties because this messes up
	constructions of the type

	        {a,b}::AntiCommuting.
	        {a,c}::AntiCommuting.

	('a' gets taken out of the first list in that case).

2009-05-25  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Made @vary work on isolated non-product terms in a sum too.

	* Fixed an @unwrap bug which would eliminate accents acting on
	sums.

2009-05-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed a problem with derivatives not inheriting
	CommutingBehaviour correctly.

	* Removed 'type=grassmann' in Indices, in favour of a more