@@ -13,7 +13,8 @@ A*B*C*D*E;
 @take(%){2..\infty};
 C*D*E;
 \end{screen}
-As usual, a range can be open by setting the second boundary to \texcommand{infty}.
-In order to select terms based on pattern matching, see \subscommand{take\_match} 
+As usual, a range can be open by setting the second boundary
+to \texcommand{infty}.  In order to select terms based on pattern
+matching, see \subscommand{take\_match}
 
 \cdbseealgo{take_match}
