@@ -12,6 +12,7 @@
 
 \newcommand{\subscommand}[1]{@{#1}}
 \newcommand{\inertcommand}[1]{{\tt @@#1}}
+\newcommand{\texcommand}[1]{{\tt $\backslash$#1}}
 \newcommand{\subsprop}[1]{{\tt #1}}
 
 \newcommand{\Cdb}{Cadabra{}}
