@@ -2985,6 +2985,8 @@ conversion algorithms from and to these two formats.
 
 \begin{algs}
 \input{algorithms/run.tex}
+\input{algorithms/maxima.tex}
+\input{algorithms/maple.tex}
 \item[{\cdbcommand{from\_math}{}[expression]}] Reads mathematica input
 format as used by GAMMA~\cite{Gran:2001yh}. Fully anti-symmetric
 tensors are denoted with
