@@ -1,3 +1,12 @@
+2009-07-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Fixed handling of and recovering from LaTeX errors.
+
+	* Catch more LaTeX errors with user-understandable error dialog
+	(in particular double super/sub script).
+
+	* Fixed a cell-focus bug.
+
 2009-07-18  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Released 1.14
